option('with_tests', type: 'boolean', value: true, description: 'Build tests')
option('with_nwchem', type: 'boolean', value: false, description: 'Build real NWChem embed library')
option('nwchem_root', type: 'string', value: '', description: 'NWChem source/build tree root')
option('nwchem_target', type: 'string', value: 'LINUX64', description: 'NWChem lib target directory')
option('nwchem_test_mpi_ranks', type: 'integer', min: 1, value: 1,
       description: 'MPI ranks used to launch real NWChem embed tests')
option('with_debug_backtrace', type: 'boolean', value: true,
       description: 'Link execinfo backtrace helpers into driver/test tools')
